Fix alignment issue to center buttons and resize images.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -9,7 +9,7 @@
 }
 
 .project img {
-    width: 70%;
+    height: 300px;
     border-radius: 8px;
     margin-left: auto;
     margin-right: auto;
@@ -18,3 +18,8 @@
 .project {
     padding: 10px 0px;
     text-align: center;
+}
+
+.project-nav {
+    text-align: center;
+}
